# matchplay

./: .dockerignore  .env.development  .env.example  .env.production  .gitignore  Cargo.toml  Dockerfile  build-release.bat  dev.bat  index.html  package-lock.json  package.json  render.yaml
.claude/: launch.json  settings.local.json
crates/protocol/: Cargo.toml
crates/protocol/src/: card.rs  identity.rs  lib.rs  messages.rs
crates/server/: Cargo.toml
crates/server/src/: config.rs  lib.rs  main.rs
crates/server/src/cards/: mod.rs  store.rs  validation.rs
crates/server/src/handlers/: health.rs  ws.rs
crates/server/src/hub/: connection.rs  hub.rs  mod.rs  room.rs
crates/server/src/middleware/: rate_limit.rs
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: CardItem.tsx  FilterBar.tsx  HandshakeModal.tsx  PublishBar.tsx  PulsePanel.tsx  PulseSidebar.tsx  SettingsView.tsx  SetupView.tsx  StatusIndicator.tsx
src/data/: games.ts
src/hooks/: useClipboard.ts  useWebSocket.ts
src/lib/: utils.ts  ws.ts
src/pages/: LandingPage.tsx  WebApp.tsx
src/stores/: pulse-store.ts
src/styles/: global.css  tokens.ts
src/types/: index.ts
tests/: Cargo.toml
tests/integration/: ws_flow.rs
