[workspace]
members = ["crates/protocol", "crates/server", "src-tauri", "tests"]
resolver = "2"

# Faster release builds for CI/Render — good enough performance for a WS server
[profile.release]
opt-level = 1        # 3 is default; 1 compiles ~3× faster with minimal runtime cost
lto = false          # link-time optimisation is very slow; skip for free-tier builds
codegen-units = 16   # default for dev; parallelises compilation units
strip = true         # smaller binary, faster upload
