[package]
name = "integration-tests"
version = "0.1.0"
edition = "2021"
publish = false

[[test]]
name = "ws_flow"
path = "integration/ws_flow.rs"

[dependencies]
server = { path = "../crates/server" }
protocol = { path = "../crates/protocol" }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
serde_json = "1"
futures-util = "0.3"
