[package]
name = "server"
version = "0.1.0"
edition = "2021"

[lib]
name = "server"
path = "src/lib.rs"

[[bin]]
name = "pulse-server"
path = "src/main.rs"

[dependencies]
protocol = { path = "../protocol" }
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dashmap = "5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "1"
tower = "0.4"
futures-util = "0.3"

[dev-dependencies]
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
